@@ -15,6 +15,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- fix incorrect quantization for images with very large number of
+  colors (#3848)
+
 - fix poor performance of polygon hatching (#3846)
 
 - upgrade clipper library to 4.2 (related to #3846)
